--- a/_posts/2020-07-23-java-mvn.md
+++ b/_posts/2020-07-23-java-mvn.md
@@ -119,6 +119,44 @@ onejar-maven-plugin
 
     mvn spring-boot:run -Dspring-boot.run.jvmArguments="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"
 
+### Maven 资源文件
+
+    src/main/resouces和src/test/resources
+
+    <build>
+      <resources>
+        <resource>
+          <directory>src/main/resources</directory>
+          <includes>
+            <include>**/*</include>
+          </includes>
+        </resource>
+      </resources>
+    </build>
+
+读取jar中的文件
+    getClass().getResourceAsStream("3Columns.csv")
+
+    val file = new File(getClass.getResource("zipcode_data.csv").toURI)
+
+    ClassLoader CLDR = this.getClass().getClassLoader();
+    InputStream inputStream = CLDR.getResourceAsStream("com/devdaily/desktopcurtain/sounds/" + soundfileName);
+[Java Jar file: How to read a file from a Jar file](https://alvinalexander.com/blog/post/java/read-text-file-from-jar-file/)  
+
+
+1. Class.getResourceAsStream(String path) ： path 不以’/'开头时默认是从此类所在的包下取资源，以’/'开头则是从
+
+ClassPath根下获取。其只是通过path构造一个绝对路径，最终还是由ClassLoader获取资源。
+
+2. Class.getClassLoader.getResourceAsStream(String path) ：默认则是从ClassPath根下获取，path不能以’/'开头，最终是由
+
+ClassLoader获取资源。
+
+3. ServletContext. getResourceAsStream(String path)：默认从WebAPP根目录下取资源，Tomcat下path是否以’/'开头无所谓，
+
+当然这和具体的容器实现有关。
+
+4. Jsp下的application内置对象就是上面的ServletContext的一种实现。
 
 ### Reference
 [Apache Maven Project](http://maven.apache.org/guides/getting-started/maven-in-five-minutes.html)  
