--- a/_posts/2020-12-12-web-ser.md
+++ b/_posts/2020-12-12-web-ser.md
@@ -53,6 +53,133 @@ soap.binding.style: rpc-远程过程调用; document-xml
 soap.binding.transport: 使用的 SOAP 协议, 一般为HTTP
 soap.operation: 定义每个portType使用的操作符
 
+#### WSDL Authentication Basic
+
+    1. 
+    Service s = new Service();
+    Port port = s.getPort();
+
+    BindingProvider prov = (BindingProvider)port;
+    prov.getRequestContext().put(BindingProvider.USERNAME_PROPERTY, "myusername");
+    prov.getRequestContext().put(BindingProvider.PASSWORD_PROPERTY, "mypassword");
+
+    port.call();
+
+    2. 
+    Authenticator myAuth = new Authenticator() 
+    {
+        @Override
+        protected PasswordAuthentication getPasswordAuthentication()
+        {
+            return new PasswordAuthentication("german", "german".toCharArray());
+        }
+    };
+
+    Authenticator.setDefault(myAuth);
+
+#### WSDL Header
+
+1. 实现SOAPHandler
+
+    <dependency>
+        <groupId>javax.xml.ws</groupId>
+        <artifactId>jaxws-api</artifactId>
+        <version>2.3.1</version>
+    </dependency>
+
+    import java.util.Set;
+    import java.util.TreeSet;
+
+    import javax.xml.namespace.QName;
+    import javax.xml.soap.SOAPElement;
+    import javax.xml.soap.SOAPEnvelope;
+    import javax.xml.soap.SOAPHeader;
+    import javax.xml.soap.SOAPHeaderElement;
+    import javax.xml.ws.handler.MessageContext;
+    import javax.xml.ws.handler.soap.SOAPHandler;
+    import javax.xml.ws.handler.soap.SOAPMessageContext;
+
+    public class DeutscheDHLHeader implements SOAPHandler<SOAPMessageContext> {
+
+      private String user;
+      private String signature;
+
+      public DeutscheDHLHeader(String user, String signature) {
+        this.user = user;
+        this.signature = signature;
+      }
+
+      @Override
+      public boolean handleMessage(SOAPMessageContext context) {
+        try {
+          SOAPEnvelope envelope = context.getMessage().getSOAPPart().getEnvelope();
+          SOAPHeader header = envelope.getHeader();
+          if (header == null) {
+            header = envelope.addHeader();
+          }
+          SOAPHeaderElement headerElement = header.addHeaderElement(envelope.createName("Authentification", "cis", "http://dhl.de/webservice/cisbase"));
+          SOAPElement userElement = headerElement.addChildElement("user", "cis", "http://dhl.de/webservice/cisbase");
+          userElement.addTextNode(user);
+          SOAPElement signElement = headerElement.addChildElement("signature", "cis", "http://dhl.de/webservice/cisbase");
+          signElement.addTextNode(signature);
+          headerElement.addChildElement(userElement);
+          headerElement.addChildElement(signElement);
+        } catch (Exception e) {
+          e.printStackTrace();
+        }
+        return true;
+      }
+
+      @Override
+      public boolean handleFault(SOAPMessageContext context) {
+        return false;
+      }
+
+      @Override
+      public void close(MessageContext context) {
+      }
+
+      @Override
+      public Set<QName> getHeaders() {
+        return new TreeSet<>();
+      }
+
+
+      
+    }
+
+    List<Handler> handlerChain = bp.getBinding().getHandlerChain();
+    handlerChain.add(new DeutscheDHLHeader(USER, SIGNATURE));
+    bp.getBinding().setHandlerChain(handlerChain);
+
+2. 使用WSBindingProvider
+
+    <dependency>
+        <groupId>com.sun.xml.ws</groupId>
+        <artifactId>jaxws-rt</artifactId>
+        <version>3.0.0</version>
+    </dependency>
+
+    还需要com.oracle.webservices.wls.jaxws-wlswss-client.jar
+
+    HelloPort port = helloService.getHelloPort();  // or something like that...
+    WSBindingProvider bp = (WSBindingProvider)port;
+
+    bp.setOutboundHeader(
+      // simple string value as a header, like <simpleHeader>stringValue</simpleHeader>
+      Headers.create(new QName("simpleHeader"),"stringValue"),
+      // create a header from JAXB object
+      Headers.create(jaxbContext,myJaxbObject)
+    );
+
+#### WSDL 查看请求报文
+
+    System.setProperty("com.sun.xml.ws.transport.http.client.HttpTransportPipe.dump", "true");
+    System.setProperty("com.sun.xml.internal.ws.transport.http.client.HttpTransportPipe.dump", "true");
+    System.setProperty("com.sun.xml.ws.transport.http.HttpAdapter.dump", "true");
+    System.setProperty("com.sun.xml.internal.ws.transport.http.HttpAdapter.dump", "true");
+    System.setProperty("com.sun.xml.internal.ws.transport.http.HttpAdapter.dumpTreshold", "999999");
+
 ### SOAP
 
 > SOAP 是基于 XML 的简易协议，可使应用程序在 HTTP 之上进行信息交换。
@@ -178,3 +305,5 @@ faultcode:
 [WebXml](http://www.webxml.com.cn/zh_cn/web_services.aspx)  
 [WS-REST](http://www.ws-rest.org/)  
 [RESTful API 设计指南](http://www.ruanyifeng.com/blog/2014/05/restful_api.html)  
+
+[Java Code Examples for javax.xml.soap.SOAPEnvelope#addHeader()](https://www.programcreek.com/java-api-examples/?class=javax.xml.soap.SOAPEnvelope&method=addHeader)
