--- a/_posts/2020-06-08-tools-vim.md
+++ b/_posts/2020-06-08-tools-vim.md
@@ -24,6 +24,9 @@ date: 2020-06-08
     3. 
     hyiltiz/vim-plugins-profile
 
+		%s/\(.*\)/@XmlElement\(name = \"\1\"\)\rprivate String \L\1\e;/g
+		g/\(^[a-z]\+\)/d
+
 ### Magic
 
 > 有些字符是本身意义, 加上\又是另一种意义, VIM引入Magic模式, 不同模式下字符不同
@@ -61,3 +64,9 @@ after:	  \v	   \m	    \M	     \V		matches ~
 ### 组
 
 > 使用\1 引用第1个分组
+
+## Reference
+[Neovim LSP, DAP and Fuzzy Finder](https://medium.com/swlh/neovim-lsp-dap-and-fuzzy-finder-60337ef08060)  
+[theniceboy/nvim](https://github.com/theniceboy/nvim/blob/master/init.vim)  
+[ChrisAmelia/dotfiles](https://github.com/ChrisAmelia/dotfiles)  
+[Iron-E](https://github.com/Iron-E)  
