--- a/_posts/2020-12-12-web-ser.md
+++ b/_posts/2020-12-12-web-ser.md
@@ -295,6 +295,9 @@ faultcode:
 > 来讲明显的更加简洁，越来越多的web服务开始采用REST风格设计和实现。例如，
 > Amazon.com提供接近REST风格的Web服务进行图书查找；雅虎提供的Web服务也是REST风格的。
 
+### Jaxb
+[JAXB and Namespace Prefixes](https://dzone.com/articles/jaxb-and-namespace-prefixes)  
+
 ## Reference
 [Web Services Description Language (WSDL) 1.1](https://www.w3.org/TR/wsdl.html#:~:text=WSDL%20is%20an%20XML%20format,format%20to%20define%20an%20endpoint.)  
 [Simple Object Access Protocol (SOAP) 1.1](https://www.w3.org/TR/2000/NOTE-SOAP-20000508/)  
