web service edit header

--- a/_posts/2020-12-12-web-ser.md
+++ b/_posts/2020-12-12-web-ser.md
@@ -172,6 +172,19 @@ soap.operation: 定义每个portType使用的操作符
       Headers.create(jaxbContext,myJaxbObject)
     );
 
+3. 修改头xmlns
+
+		SOAPHandler.handleMessage
+		envelope.removeNamespaceDeclaration
+		envelope.addNamespaceDeclaration
+
+4. 修改前缀
+		
+		SOAPHandler.handleMessage
+		envelope.setPrefix
+		header.setPrefix
+		envelope.getBody().setPrefix
+
 #### WSDL 查看请求报文
 
     System.setProperty("com.sun.xml.ws.transport.http.client.HttpTransportPipe.dump", "true");
