--- a/_posts/2020-12-12-web-ser.md
+++ b/_posts/2020-12-12-web-ser.md
@@ -148,6 +148,8 @@ soap.operation: 定义每个portType使用的操作符
       
     }
 
+    HelloPort port = helloService.getHelloPort();  // or something like that...
+    BindingProvider bp = (BindingProvider)port;
     List<Handler> handlerChain = bp.getBinding().getHandlerChain();
     handlerChain.add(new DeutscheDHLHeader(USER, SIGNATURE));
     bp.getBinding().setHandlerChain(handlerChain);
@@ -163,7 +165,7 @@ soap.operation: 定义每个portType使用的操作符
     还需要com.oracle.webservices.wls.jaxws-wlswss-client.jar
 
     HelloPort port = helloService.getHelloPort();  // or something like that...
-    WSBindingProvider bp = (WSBindingProvider)port;
+    BindingProvider bp = (BindingProvider)port;
 
     bp.setOutboundHeader(
       // simple string value as a header, like <simpleHeader>stringValue</simpleHeader>
