es and python gui

--- a/_posts/2021-11-23-fw-rpa.md
+++ b/_posts/2021-11-23-fw-rpa.md
@@ -13,10 +13,21 @@ date: 2021-11-23
 * scrapy
 * Portia
 * Beautiful Soup
+* XPath
+
+### browser automation framework
+
+* Selenium
+* Tag UI
 
 ### test automation framework
 
-#### appium
+* appium
+
+### ui automation framework
+
+* ui.vision
+* SikuliX
 
 
 ### Reference
@@ -28,6 +39,6 @@ date: 2021-11-23
 [scrapy](https://scrapy.org/)  
 [Portia](https://github.com/scrapinghub/portia)  
 [Beautiful Soup](https://www.crummy.com/software/BeautifulSoup/bs4/doc/)  
+[XPath](https://developer.mozilla.org/en-US/docs/Web/XPath)  
 [SikuliX](http://sikulix.com/)  
-[UiPath](https://www.uipath.com/)  
 [ui.vision](https://ui.vision/)  
