--- a/_posts/cyber-security/information-gathering/2022-01-27-ig-dns.md
+++ b/_posts/cyber-security/information-gathering/2022-01-27-ig-dns.md
@@ -34,7 +34,9 @@ date: 2022-01-27
 ### 查询子域名
 
 > 工具: Maltego, wydomain, subDomainsBrute, dnsmaper, Layer子域名挖掘机
+
 > fierce
+> nslookup
 
   1. http://tool.chinaz.com/subDomains
 	2. https://dnsdumpster.com/
