front end developer

--- a/_posts/multimedia/2022-06-08-mm-ffmpeg.md
+++ b/_posts/multimedia/2022-06-08-mm-ffmpeg.md
@@ -8,9 +8,46 @@ date: 2022-06-08
 
 ## FFmpeg
 
+* ./libavfilter/allfilters.c(ffmpeg -filters) - 声明支持的过滤器
+* ./libavdevice/alldevices.c(ffmpeg -devices) - 声明支持的平台设备
+* ./libavformat/allformats.c(ffmpeg -formats) - 声明支持的媒体格式
+* ./libavcodec/allcodecs.c(ffmpeg -codecs) - 声明支持的编解码格式
+
+[输入和输出设备 - FFmpeg Devices Documentation](https://ffmpeg.org/ffmpeg-devices.html#avfoundation)  
+    ffmpeg -f avfoundation -list_devices true -i ""
+
+
+默认音频采样参数
+    ffmpeg -ar 44100 -ac 2 -f f32le audio.pcm
+
+### 结构
+  
+#### AVFormatContext
+> 上下文, 通过`avformat_open_input` 函数创建, 包含这个媒体是从哪获取, 等等
+> 使用完后需要释放
+
+#### AVPacket
+> 数据包, 分为音频数据包和视频数据包
+
+data: 存放具体数据
+size: 数据大小
+
+    av_init_packet: 初始化
+    av_packet_unref: 释放(每次使用packet需要调用该方法清理buf)
+    av_packet_alloc: 分配空间(包含av_init_packet)
+    av_packet_free: 释放空间(包含av_packet_unref)
+
+#### AVInputFormat
+> 输入
+
+#### AVOutputFormat
+> 输出
+
+
 
 ### Reference
 [FFmpeg Compilation Guide](https://trac.ffmpeg.org/wiki/CompilationGuide)  
 [Building ffmpeg iOS libraries for armv7, armv7s, arm64, i386 and universal](https://stackoverflow.com/questions/22789827/building-ffmpeg-ios-libraries-for-armv7-armv7s-arm64-i386-and-universal)  
 [How to compile latest FFmpeg Library for Android?](https://stackoverflow.com/questions/37472678/how-to-compile-latest-ffmpeg-library-for-android)  
 [Adding ffmpeg to our Xcode project](https://stackoverflow.com/questions/45613907/adding-ffmpeg-to-our-xcode-project)  
+[What is a Codec (e.g. DivX?), and how does it differ from a File Format (e.g. MPG)?](https://superuser.com/questions/300897/what-is-a-codec-e-g-divx-and-how-does-it-differ-from-a-file-format-e-g-mp/300997#300997)  
