--- a/_posts/tools/2020-06-08-tools-vim.md
+++ b/_posts/tools/2020-06-08-tools-vim.md
@@ -70,3 +70,4 @@ after:	  \v	   \m	    \M	     \V		matches ~
 [ChrisAmelia/dotfiles](https://github.com/ChrisAmelia/dotfiles)  
 [Iron-E](https://github.com/Iron-E)  
 [clangd](https://clangd.llvm.org/installation)  
+[Power of g](https://vim.fandom.com/wiki/Power_of_g)  
