--- a/_posts/web/2022-07-08-web-redux.md
+++ b/_posts/web/2022-07-08-web-redux.md
@@ -8,5 +8,19 @@ date: 2022-07-08
 
 ## Redux
 
+* reducer
+* state
+* action
+* Redux store
+* dispatch
+
+### 三大原则
+
+* 单一数据源
+* State 是只读的
+* 使用纯函数来执行修改
+
+
+
 ## Reference
 [Redux 中文文档](https://www.redux.org.cn/)  
