--- a/_posts/tools/2022-05-18-tools-git.md
+++ b/_posts/tools/2022-05-18-tools-git.md
@@ -27,6 +27,21 @@ date: 2022-05-18
     // 修改运程地址
     git remote set-url origin http://git.XXXX.com/XXX/XXX.git/
 
+### repo
+
+#### 查看分支
+
+    cd .repo/manifests
+    git branch -a
+
+#### 切换分支
+
+    repo init -b <branch-name>
+    repo sync // 如果不需要与服务器数据一致, 可以不运行这步
+    repo start <branch-name> --all
+
+    repo branches // 查看切换结果
+
 ### Error
 
 #### RPC failed
