--- a/_posts/web/2020-03-27-web-mvn.md
+++ b/_posts/web/2020-03-27-web-mvn.md
@@ -106,3 +106,8 @@ pom.xml:
       User-local build process VM options (overrides Shared options): -Djps.track.ap.dependencies=false
 
    [Lombok Does not work with IntelliJ EAP 2020.3 Build 203.4203.26](https://github.com/rzwitserloot/lombok/issues/2592)  
+
+### mvn 跳过测试
+
+    mvn install -Dmaven.test.skip=true
+    mvn install -DskipTests
