--- a/_posts/tools/2020-06-08-tools-vim.md
+++ b/_posts/tools/2020-06-08-tools-vim.md
@@ -75,3 +75,4 @@ after:	  \v	   \m	    \M	     \V		matches ~
 [Iron-E](https://github.com/Iron-E)  
 [clangd](https://clangd.llvm.org/installation)  
 [Power of g](https://vim.fandom.com/wiki/Power_of_g)  
+[Automatic dark mode for terminal applications](https://arslan.io/2021/02/15/automatic-dark-mode-for-terminal-applications/)  
