linux startup exec

--- a/_posts/tools/2020-06-08-tools-vim.md
+++ b/_posts/tools/2020-06-08-tools-vim.md
@@ -68,6 +68,26 @@ after:	  \v	   \m	    \M	     \V		matches ~
 
     见Reference clangd
 
+## Mapper
+
+    If Control+V followed by ALT-x shows ^[x (type in terminal) you can fix it with this small script from vim.wikia.com:
+
+    -- Modes
+    --   normal_mode = "n",
+    --   insert_mode = "i",
+    --   visual_mode = "v",
+    --   visual_block_mode = "x",
+    --   term_mode = "t",
+    --   command_mode = "c",
+    -- Normal -- Increase & Decrease
+    -- keymap
+    --   ctrl    = <C->
+    --   command = <D->
+    --   alt     = <A->
+    --   shift   = <S->
+
+    :h <S-
+
 ## Reference
 [Neovim LSP, DAP and Fuzzy Finder](https://medium.com/swlh/neovim-lsp-dap-and-fuzzy-finder-60337ef08060)  
 [theniceboy/nvim](https://github.com/theniceboy/nvim/blob/master/init.vim)  
