--- a/_posts/tools/2022-05-18-tools-git.md
+++ b/_posts/tools/2022-05-18-tools-git.md
@@ -475,6 +475,12 @@ hint: commands sometime before your next pull:
     1. git switch: 切换分支和创建新分支
     2. git restore: 恢复已修改文件 = git checkout -- <file>...
 
+### Hooks
+
+    .git/hooks
+
+    husky
+    commitlit
 
 ### Reference
 [git](https://git-scm.com/book/zh/v2/%E8%B5%B7%E6%AD%A5-%E5%85%B3%E4%BA%8E%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6)  
