--- a/_posts/ios/2022-04-07-ios-env.md
+++ b/_posts/ios/2022-04-07-ios-env.md
@@ -11,6 +11,8 @@ date: 2022-04-07
 ### 1. 目录
 
 1. simulator系统保存目录- /Library/Developer/CoreSimulator/Profiles/Runtimes
+2. 个人证书 ~/Library/MobileDevice/Provisioning\ Profiles
+    8c963f15-51d3-4b3a-bee1-c5c00ff4e5ba.mobileprovision
 
 ### Reference
 
