--- a/_posts/db/2022-05-12-mysql.md
+++ b/_posts/db/2022-05-12-mysql.md
@@ -22,19 +22,113 @@ date: 2022-05-12
 
 ### 重置密码
 
-> 默认root  无密码
+1. 默认root  无密码   8.0
 
-		1. vim /etc/mysql/my.cnf
+		1. vim /etc/mysql/my.cnf (/etc/my.cnf)
 		2. 添加, 无密码登录
 				[mysqld]
 				skip-grant-tables
 		3. 重置密码
 				UPDATE mysql.user SET authentication_string=null WHERE User='root';
+                UPDATE mysql.user set authentication_string=PASSWORD("rootpwd) WHERE User="root" and Host="localhost";
 				FLUSH PRIVILEGES;
 				exit;
 		4. 修改密码
 				ALTER USER 'root'@'localhost' IDENTIFIED WITH caching_sha2_password BY 'yourpasswd';
+                ALTER USER 'root'@'%' IDENTIFIED WITH mysql_native_password BY '123';
+
+### 字符
+
++ [mysql使用utf8mb4经验吐血总结](https://blog.csdn.net/qq_17555933/article/details/101445526)
+
+> The character set named utf8 uses a maximum of three bytes per character and contains only BMP characters. The utf8mb4 character set uses a maximum of four bytes per character supports supplementary characters:
+
+- For a BMP character, utf8 and utf8mb4 have identical storage characteristics: same code values, same encoding, same length.
+- For a supplementary character, utf8 cannot store the character at all, whereas utf8mb4 requires four bytes to store it. Because utf8 cannot store the character at all, you have no supplementary characters in utf8 columns and need not worry about converting characters or losing data when upgrading utf8 data from older versions of MySQL.
+
+    SHOW VARIABLES LIKE 'character%';
+    show variables like ’%collation%’;
+    // 库的字符集
+    Select SCHEMA_NAME,DEFAULT_CHARACTER_SET_NAME,DEFAULT_COLLATION_NAME,SQL_PATH from information_schema.SCHEMATA;
+    // 表的字符集
+    show table status from test like '%t6%'/G;
+    // 列的字符集
+    show full columns from test.books;
+
+    // 所有字符集
+    SHOW CHARACTER SET;
+    // 所有字符串的排序规则 (字段大小写是否敏感)
+    SHOW COLLATION;
+
+### 命令
+
+    Y表示有权限 ，N表示无权限
+    # 1.mysql.user表 (all)
+    select * from mysql.user where user='root';
+
+    # 2.mysql.db表 (empty)
+    select * from mysql.db where user='root';
+
+    # 3.mysql.tables_priv (empty)
+    select * from mysql.tables_priv where user='root';
+
+    # 4.mysql.colums_priv表 (empty)
+    select * from mysql.columns_priv where user='root';
+
+    # 5.mysql.procs_priv (empty)
+    select * from mysql.procs_priv where user='root';
+
+    mysql -h 主机名 -u 用户名 -p
+
+    show databases;
+    CREATE DATABASE <name>;
+    use <name>;
+
+    show tables;
+    create table tablename(columns)
+
+    CREATE USER <user_account> IDENTIFIED BY <password>;
+    SHOW GRANTS FOR <dbadmin>@<localhost>;
+    CREATE USER superadmin@'%' IDENTIFIED BY 'mypassword';
+    CREATE USER zhengwu@'%' IDENTIFIED BY 'Zhengwu#456';
+
+    GRANT SELECT , INSERT ON testdb.news TO 'shunping'@'localhost'
+    GRANT ALL ON testdb.* TO 'shunping'@'%';
+
+    drop user <user>@<localhost>;
+
+    select user();
+    select user,host from mysql.user;
+    show grants for 'pdh'@'%';
+
+
+    // 添加自增id
+    alter table user modify id integer auto_increment ;        
+
+    // 查看库下表的数量
+    SELECT TABLE_NAME,TABLE_ROWS FROM information_schema.`TABLES` WHERE TABLE_SCHEMA = (SELECT database()) ORDER BY TABLE_ROWS DESC;
+
+
+### problem
+
+#### 1. ONLY_FULL_GROUP_BY
+    5.7 默认 ONLY_FULL_GROUP_BY
+    SELECT list is not in GROUP BY clause and contains nonaggregated column ‘×××’
+    SET GLOBAL sql_mode=(SELECT REPLACE(@@sql_mode,'ONLY_FULL_GROUP_BY',''));
+
+#### 2. You do not have the SUPER privilege and binary logging is enabled
+
+    mysql -u root -p
+
+    mysql>set global log_bin_trust_function_creators = 1;
+
+    永久解决方案如下：
+    修改配置文件，在[mysqld]部分加上：
+    log_bin_trust_function_creators=1
+    注：linux系统配置文件/etc/my.cnf
+    windows系统配置文件my.ini
+
 
 ### Reference
 [Installing MySQL Shell on Linux](https://dev.mysql.com/doc/mysql-shell/8.0/en/mysql-shell-install-linux-quick.html)  
-
++ [	MySQL 教程](https://m.runoob.com/mysql/)
